# STM_DataProcessing

./: .gitignore  LICENSE  README.md  README.rst  __init__.py  main.py  pyproject.toml  requirements.txt
GPT_version/: test_loader.py
STM/: __init__.py  lattice.py  nanonis_loader.py  preview_plot.py  qpi_core.py  utility.py
dft_codes/: .gitignore  __init__.py
dft_codes/openmx/: __init__.py  band.py  dos.py  parser.py  unfolding.py
dft_codes/wannier90/: __init__.py  contourmap.py  mlwf_hamiltonian.py
docs/: STM_README.rst
docs/planning/: roadmap.md
docs/stm_data_processing/dft/wannier90/: mlwf_ek2d.md  mlwf_gk.md  mlwf_hamiltonian.md  mlwf_susceptibility.md  static_lindhard_overlap.md
docs/stm_data_processing/stm/: qpi_born.md  qpi_jdos.md
sample/: Nanonis_loader.py  __init__.py  core.py  nanonis_loader.py  package_123124.py  preview_plot.py  read_3ds.m  utility.py
sample/test_data/: Grid Spectroscopy008.3ds  Grid Spectroscopy012.3ds  example.txt
src/stm_data_processing/: __init__.py  config.py
src/stm_data_processing/dft/: __init__.py
src/stm_data_processing/dft/openmx/: __init__.py  band.py  diff_gcube.py  dos.py  parser.py  unfolding.py
src/stm_data_processing/dft/wannier90/: __init__.py  bare_lindhard.py  contourmap.py  mlwf_ek2d.py  mlwf_ek2d_descrepted.py  mlwf_gk.py  mlwf_hamiltonian.py  mlwf_susceptibility.py  susceptibility.py
src/stm_data_processing/io/: __init__.py  ek2d_io.py  lattice_loader.py  nanonis_loader.py  qpi_io.py  susceptibility_io.py  w90hr_loader.py
src/stm_data_processing/stm/: __init__.py  lattice.py  nanonis_loader.py  preview_plot.py  qpi_born.py  qpi_core.py  qpi_green.py  qpi_jdos.py  qpi_tmat.py  utility.py
src/stm_data_processing/utils/: __init__.py  btk.py  lattice.py  lattice_loader.py  lattice_operations.py  lindhard1dfree.py  miscellaneous.py  monitor.py  reciprocal_space.py
test/: Nanonis_loader.py  Nanonis_loader_GPT.py  __init__.py  code_test.ipynb  core.py  decorator_test.py  func.py  helpers.py  matrix_utilities.py  ploting.py  quick_ploting.py  utilities.py
tests/: test_import.py
