[project]
name = "stm-data-processing"
version = "0.1.0"
description = "STM / DFT / Wannier90 data processing toolkit"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "numpy>=2.3.0",
    "scipy>=1.16.0",
    "matplotlib>=3.10.0",
    "h5py>=3.15.0",
    "pandas>=2.3.0",
    "tqdm>=4.67.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["STM", "dft_codes"]